Infrastructure/CD/k8s/Manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
  labels:
    app: app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app:      app
        app-type: frontend
    spec:
      containers:
      - name:   app
        image:  app:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "64Mi"
            cpu:    "250m"
          limits:
            memory: "128Mi"
            cpu:    "500m"
